Atualização de código

--- a/exercicio_html/formulario.html
+++ b/exercicio_html/formulario.html
@@ -29,9 +29,14 @@
         <input type="radio" name="horario-festa" id="horario-tarde" /><label for="horario-tarde">Tarde</label>
         <input type="radio" name="horario-festa" id="horario-noite" /><label for="horario-noite">Noite</label>
         <br /><br /><br />
-        <label for="number">Acompanhantes</label>
+        <label for="number">Acompanhantes:</label>
         <input type="number" max="6" min="0" step="1"/> 
-        <br /><br /><br />
+        <br /><br />
+        <p>
+            Sugestão de local para a festa:
+        </p>
+        <textarea></textarea>
+        <br /><br />
         <input type="button" value="Cadastrar" onclick="confirmNullSpaces()" />
         <script>
             function confirmPassword() {
