--- a/exercicio_html/formulario.html
+++ b/exercicio_html/formulario.html
@@ -16,10 +16,13 @@
         <p>
             Preencha seus dados abaixo:
         </p>
+        <label for="nome">Nome:</label>
         <input type="text" id="nome" placeholder="Nome" />
         <br /><br />
+        <label for="email">E-mail:</label>
         <input type="email" id="email" placeholder="E-mail" />
         <br /><br />
+        <label for="password">Senha:</label>
         <input type="password" id="password" placeholder="Senha" required />
         <br /><br />
         <p>
@@ -29,15 +32,15 @@
         <input type="radio" name="horario-festa" id="horario-tarde" /><label for="horario-tarde">Tarde</label>
         <input type="radio" name="horario-festa" id="horario-noite" /><label for="horario-noite">Noite</label>
         <br /><br /><br />
-        <label for="number">Acompanhantes:</label>
-        <input type="number" max="6" min="0" step="1"/> 
+        <label for="acompanhantes">Acompanhantes:</label>
+        <input type="number" id="acompanhantes" max="6" min="0" step="1"/> 
         <br /><br />
         <p>
             Sugestão de local para a festa:
         </p>
         <textarea></textarea>
         <br /><br />
-        <input type="button" value="Cadastrar" onclick="confirmNullSpaces()" />
+        <button type="button" onclick="confirmNullSpaces()">Cadastrar</button>
         <script>
             function confirmPassword() {
                 var password = document.getElementById('password').value; // Obtém o valor da senha digitada
