--- a/exercicio_html/formulario.html
+++ b/exercicio_html/formulario.html
@@ -40,7 +40,7 @@
         </p>
         <textarea></textarea>
         <br /><br />
-        <button type="button" onclick="confirmNullSpaces()">Cadastrar</button>
+        <button type="submit" onclick="confirmNullSpaces()">Cadastrar</button>
         <script>
             function confirmPassword() {
                 var password = document.getElementById('password').value; // Obtém o valor da senha digitada
