--- a/exercicio_css/index.html
+++ b/exercicio_css/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="titulo-container">
+        <div class="container-cabecalho">
             <h1 class="titulo-site">Portal da Mulher Informada</h1>
         </div>
         <div class="links-secoes">
@@ -35,54 +35,43 @@
     </header>
 
     <section>
-        <h2 class="titulo-secao">Educação</h2>
-
-        <div class="grupo-noticias">
+        <h2 class="titulo-secao-um">Educação</h2>
+        <div class="grupo-noticias-um">
             <ul>
                 <li>
                     <article>
                         <h3 class="titulo-noticia">Mulheres na TI: cursos e vagas exclusivas para elas</h3>
                         <img class="imagem-noticia" src="./imagens/img-noticia-01.JPG" title="Imagem Notícia 1" />
-                        <p class="descricao-noticia">Vivo, Educ360º, Mercado Livre e iTalents anunciaram essa semana
-                            vagas
-                            e cursos exclusivos para o Dia Internacional da Mulher.
-                            Dados mais recentes da Pesquisa Nacional por Amostra de Domicílios (PNAD)
-                            indicam entre os 580 mil profissionais de TI do país, apenas 20% são mulheres.
-                            Já o Instituto Brasileiro de Geografia e Estatística (IBGE) diz que o público feminino
-                            forma apenas 13,3% dos alunos de computação e tecnologia da informação e comunicação (TIC).
+                        <p class="descricao-noticia">Empresas anunciaram essa semana vagas e cursos exclusivos para o 
+                            Dia Internacional da Mulher. Dados mais recentes da pesquisa indicam entre os 580 mil profissionais 
+                            de TI do país, apenas 20% são mulheres. Já o IBGE diz que o público feminino forma apenas 13,3% dos 
+                            alunos de computação e tecnologia da informação e comunicação.
                         </p>
+                        <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <h3 class="titulo-noticia">Marielle Franco: semente que inspira meninas e mulheres dentro e fora
-                            da escola</h3>
+                        <h3 class="titulo-noticia">Marielle Franco: semente que inspira meninas e mulheres</h3>
                         <img class="imagem-noticia" src="./imagens/img-noticia-02.jpg" title="Imagem Notícia 2" />
                         <p class="descricao-noticia"> Legado de Marielle virou semente e, assim como outras tantas
-                            mulheres de luta,
-                            tem inspirado trajetórias de meninas e mulheres no combate à violência de gênero, política,
-                            ao machismo
-                            e ao racismo. A fim de seguir espalhando as histórias e tirando da invisibilidade a atuação
-                            de tantas outras
-                            mulheres na política, na literatura, nos movimentos sociais e levá-las para dentro dos muros
-                            das escolas,
-                            educadoras criam propostas de planos de aula e sequências didáticas.</p>
+                            mulheres de luta, tem inspirado trajetórias de meninas e mulheres no combate à violência de gênero, política,
+                            ao machismo e ao racismo. A fim de seguir espalhando as histórias das mulheres na política, na literatura, 
+                           educadoras criam propostas de planos de aula e sequências didáticas.
+                        </p>
+                        <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <h3 class="titulo-noticia">Estudantes demandam discussões sobre gênero, raça e sexualidade na
-                            escola</h3>
+                        <h3 class="titulo-noticia">Estudantes demandam discussões sobre gênero e sexualidade</h3>
                         <img class="imagem-noticia" src="./imagens/img-noticia-03.jpg" title="Imagem Notícia 3" />
-                        <p class="descricao-noticia">Projetos elaborados por estudantes comprometidos com um Ensino
-                            Médio de qualidade
-                            reforçam a necessidade da abordagem das agendas, apesar de resistências da comunidade
-                            escolar.
-                            O projeto “Lute como uma garota” é um exemplo da persistência das estudantes.
-                            Duas alunas do terceiro ano do Ensino Médio, com base em experiências pessoais e de outras
-                            meninas
-                            dentro da escola, viram a urgência de debater e combater o assédio sexual e moral,
-                            principalmente contra jovens negras. </p>
+                        <p class="descricao-noticia">Projetos elaborados por estudantes reforçam a necessidade da discussão,
+                            apesar de resistências da comunidade escolar. O projeto “Lute como uma garota” é um exemplo da 
+                            persistência das estudantes. Duas alunas, com base em experiências pessoais viram a urgência de debater 
+                            e combater o assédio sexual e moral, principalmente contra jovens negras. 
+                        </p>
+                        <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                 </li>
             </ul>
@@ -90,61 +79,49 @@
     </section>
 
     <section>
-        <h2 class="titulo-secao">Finanças</h2>
-
-        <div class="grupo-noticias">
+        <h2 class="titulo-secao-dois">Finanças</h2>
+        <div class="grupo-noticias-dois">
             <ul>
                 <li>
                     <article>
-                        <h3 class="titulo-noticia">Quais são os 5 erros mais comuns na Declaração de Imposto de Renda?
-                        </h3>
+                        <h3 class="titulo-noticia">Quais são os 5 erros mais comuns na Declaração de Imposto de Renda?</h3>
                         <img class="imagem-noticia" src="./imagens/img-noticia-04.jpg" title="Imagem Notícia 4" />
                         <p class="descricao-noticia">O que você mais tem dúvida na hora de declarar? Fizemos uma
-                            pesquisa e chegamos
-                            a alguns tópicos interessantes, que você deve ter atenção, como em relação aos dependentes,
-                            bens com o cônjuge,
-                            declaração de imóveis, entre outros. </p>
+                            pesquisa e chegamos a alguns tópicos interessantes, que você deve ter atenção, como em relação aos dependentes,
+                            bens com o cônjuge, declaração de imóveis, entre outros. 
+                        </p>
+                        <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
-                </li>
-
-                <article>
-                    <h3 class="titulo-noticia">Empreendedora faz sucesso com cafeteria temática de gatos</h3>
-                    <img class="imagem-noticia" src="./imagens/img-noticia-06.jpg" title="Imagem Notícia 5" />
-                    <p class="descricao-noticia">Aberta em julho de 2020, a Gato Café faturou R$ 1,1 milhão em um ano de
-                        operação.
-                        Durante uma viagem para o Japão, em fevereiro de 2018, Giovanna Molinaro conheceu um “café de
-                        gatos”,
-                        em que era possível interagir com os animais no espaço. “Achei a ideia incrível e me senti muito
-                        bem no local.
-                        Quando voltei ao Brasil, comecei a pesquisar sobre o assunto e descobri que existiam
-                        estabelecimentos assim espalhados pelo mundo”, afirma.
-                    </p>
-                </article>
                 </li>
                 <li>
                     <article>
-                        <h3 class="titulo-noticia">Onde juntar dinheiro para viajar? 4 investimentos para viajantes!
-                        </h3>
-                        <img class="imagem-noticia" src="./imagens/img-noticia-05.jpg" title="Imagem Notícia 6" />
-                        <p class="descricao-noticia">Investir é a melhor forma de fazer seu dinheiro render mais. Para
-                            isso,
-                            é necessário saber qual o seu objetivo (classificados em curto, médio e longo prazo) para
-                            escolher o melhor
-                            investimento para você. Normalmente, o curto prazo é realizado dentro dentro do mesmo ano;
-                            médio prazo varia entre 1 e 5 anos; e o longo prazo leva, no mínimo, cinco anos para ser
-                            realizado.
-                        </p>
+                        <h3 class="titulo-noticia">Empreendedora faz sucesso com cafeteria temática de gatos</h3>
+                        <img class="imagem-noticia" src="./imagens/img-noticia-06.jpg" title="Imagem Notícia 5" />
+                    <p class="descricao-noticia">Aberta em julho de 2020, a Gato Café faturou R$ 1,1 milhão em um ano de
+                        operação. Durante uma viagem para o Japão, Giovanna Molinaro conheceu um “café de
+                        gatos”, em que era possível interagir com os animais no espaço. 
+                    </p>
+                    <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                 </li>
                 <li>
+                    <article>
+                        <h3 class="titulo-noticia">Onde juntar dinheiro para viajar? 4 investimentos para viajantes!</h3>
+                        <img class="imagem-noticia" src="./imagens/img-noticia-05.jpg" title="Imagem Notícia 6" />
+                        <p class="descricao-noticia">Investir é a melhor forma de fazer seu dinheiro render mais. Para
+                            isso, é necessário saber qual o seu objetivo. O curto prazo é realizado dentro dentro do mesmo ano;
+                            médio prazo varia entre 1 e 5 anos; e o longo prazo leva no mínimo cinco anos para ser realizado.
+                        </p>
+                        <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
+                    </article>
+                </li>
             </ul>
         </div>
     </section>
 
     <section>
-        <h2 class="titulo-secao">Saúde</h2>
-
-        <div class="grupo-noticias">
+        <h2 class="titulo-secao-tres">Saúde</h2>
+        <div class="grupo-noticias-um">
             <ul>
                 <li>
                     <article>
@@ -154,6 +131,7 @@
                             ao desenvolvimento de diferentes tipos de câncer, em especial o de colo do útero. Desde o início de março 
                             de 2015 a vacina contra o HPV já está disponível pelo SUS para meninas de 9 a 11 anos.
                         </p>
+                        <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                 </li>
                 <li>
@@ -162,7 +140,9 @@
                         <img class="imagem-noticia" src="./imagens/img-noticia-08.jpg" title="Imagem Notícia 8" />                        
                         <p class="descricao-noticia">Pesquisa feita pela Universidade da Califórnia analisou como a bebida impacta 
                             os exercícios físicos e a quantidade de horas que dormimos. Alertam que o café também é capaz de proteger 
-                            a saúde do coração e prevenir doenças degenerativas, como Alzheimer e Parkinson</p>
+                            a saúde do coração e prevenir doenças degenerativas, como Alzheimer e Parkinson
+                        </p>
+                        <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                 </li>
                 <li>
@@ -170,8 +150,10 @@
                         <h3 class="titulo-noticia">Estudo canadense diz que mulheres trans não têm vantagem nos esportes</h3>
                         <img class="imagem-noticia" src="./imagens/img-noticia-09.jpg" title="Imagem Notícia 9" />                        
                         <p class="descricao-noticia">Segundo a pesquisa, os fatores que determinam o desempenho de um atleta são nutrição 
-                            e qualidade de treinamento.  Além de estudos biomédicos, a pesquisa também considerou elementos sociais. Os resultados apresentados
-                             a partir de evidências disponíveis provam que os fatores relacionados à puberdade masculina não produzem qualquer vantagem para mulheres trans atletas.</p>
+                            e qualidade de treinamento.  Os resultados apresentados provam que os fatores relacionados à puberdade masculina 
+                            não produzem qualquer vantagem para mulheres trans atletas.
+                        </p>
+                        <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                 </li>
             </ul>
@@ -179,9 +161,8 @@
     </section>
 
     <section>
-        <h2 class="titulo-secao">Atualidades</h2>
-
-        <div class="grupo-noticias">
+        <h2 class="titulo-secao-quatro">Atualidades</h2>
+        <div class="grupo-noticias-dois">
             <ul>
                 <li>
                     <article>
@@ -191,6 +172,7 @@
                             No início do ano, a varejista contratou a consultoria Alvarez & Marsal para restruturar a dívida.
                             Segundo informações disponíveis no site da  loja, a empresa está presente em 22 estados, com cerca de 60 lojas. 
                         </p>
+                        <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                 </li>
                 <li>
@@ -199,7 +181,9 @@
                         <img class="imagem-noticia" src="./imagens/img-noticia-11.jpg" title="Imagem Notícia 11" />                        
                         <p class="descricao-noticia">Goianas estavam detidas há mais de um mês, depois de serem acusadas de chegar a Frankfurt 
                             com 40 kg de cocaína na bagagem despachada. A liberdade veio após uma autorização do Ministério Público alemão, e foi 
-                            confirmada pelo chefe do Gabinete de Relações Internacionais de Goiás.</p>
+                            confirmada pelo chefe do Gabinete de Relações Internacionais de Goiás.
+                        </p>
+                        <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                 </li>
                 <li>
@@ -210,11 +194,17 @@
                             a imagem mais nítida já registrada de um buraco negro supermassivo localizado no centro da 
                             Via Láctea. O registro inédito trata-se do Sagitário A.
                         </p>
+                        <a class="botao-lermais" href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                 </li>
             </ul>
         </div>
     </section>
+
+    <footer class="container-rodape">
+        <p class="texto-rodape">Fontes das notícias e imagens são de diversos sites da internet. Finalidade deste site é para exercitar HTML e CSS em curso da EBAC.</p>
+    </footer>
+
 </body>
 
 </html>
